tests/rascal/negative/name_errors/L3/7_no-proc2.ob
MODULE Bla;

CONST
  f = 3;

BEGIN
  f()
END Bla.